src/objects/QPMS__Audit_Program__c.object
<CustomObject>
    <description>This object is for Audit Programs.</description>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>Used to store allow days in approval orocess</description>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>This field stores the name of approval process currently this record hold</description>
        <inlineHelpText>This field stores the name of approval process currently this record hold</inlineHelpText>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AuditProgram</fullName>
                </value>
                <value>
                    <fullName>auditProgramApproval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>this field is used to store approval group related value</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to completed the approval process in audit program</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for status change</description>
        <label>Approval Process Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to store the Approval required for Audit Program</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>To store the status of record in approval process</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this filed is used to store second approval in approval process</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is used to store third user in papproval process</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is used to store  user in papproval process sequence</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store first user in approval process</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditProgram_Locations__c</fullName>
        <description>This is used to store locations in audit program</description>
        <label>Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditProgram_Title__c</fullName>
        <description>To Store the Title data</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To seperate two approvals</description>
        <label>Audit Program Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Owner__c</fullName>
        <description>To Store the Owner of Audit Program.</description>
        <formula>Owner:User.LastName &amp;&quot; &quot;&amp; Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Status__c</fullName>
        <description>To store the status of Audit Program in approvals.</description>
        <label>Audit Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__AuditsToBeCloned__c</fullName>
        <description>This can be used to store the audit ids for clone functionality</description>
        <inlineHelpText>This can be used to store the audit ids for clone functionality</inlineHelpText>
        <label>AuditsToBeCloned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity_Group__c</fullName>
        <label>Authorized Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity__c</fullName>
        <description>This field is used to store the Authorised Entity data in Security</description>
        <label>Authorized Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Auto_Close_Audit_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used to store Auto Close Audit Program value</description>
        <label>Auto Close Audit Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CheckListsToBeCloned__c</fullName>
        <description>This field is used to store the checklist value in AuditProgram Checklist</description>
        <label>CheckListsToBeCloned</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Closed_date__c</fullName>
        <description>This field is used to store the closed date of audit program.</description>
        <label>Closed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>this field is used to store CurrentApprovalSequenceNumber in approval process</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Detail__c</fullName>
        <description>To store Details Data in audit program</description>
        <label>Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Effective_Date__c</fullName>
        <description>To display Effective Date</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Effectiveness_Review_Date__c</fullName>
        <description>To store Effectiveness Review Date values</description>
        <label>Effectiveness Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Effectiveness_Review_In_Advance_In_days__c</fullName>
        <description>To Store the Advance value of Effectiveness Review in AuditProgram</description>
        <label>Effectiveness Review In Advance(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store the Enable Security value.</description>
        <label>Enable Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Approval__c</fullName>
        <defaultValue>&apos;NONE&apos;</defaultValue>
        <description>Used to choose the Rule Escalation for approval</description>
        <label>Escalation Rule for Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Task__c</fullName>
        <description>Used to choose the Rule Escalation for Task</description>
        <label>Escalation Rule for Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <description>To Store Expiration Date values</description>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>To hold followers for this record</description>
        <inlineHelpText>To hold followers for this record</inlineHelpText>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save the Initial Submitter of the AuditProgram.</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_ProgramswxMq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <description>To display the name of the initiating site</description>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <defaultValue>&apos;Global_Quality_Group&apos;</defaultValue>
        <description>Stores the logged in user site public group</description>
        <inlineHelpText>Stores the logged in user site public group</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Crated for kenco requirement</description>
        <inlineHelpText>Crated for kenco requirement</inlineHelpText>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Audit Programs (Initiating Site)</relationshipLabel>
        <relationshipName>Audit_Programs_Init_Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>this field is is used in approval process to store note to approvar value</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Program_Number__c</fullName>
        <formula>HYPERLINK($Setup.QPMS__QC_settings__c.QPMS__URL__c+&apos;/apex/AuditProgram?Id=&apos;+Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Program_Type__c</fullName>
        <description>To display the program type picklist values</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>This filed is used to store the Reason value when Audit Program is Deactivate from the Header.</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordcloneId__c</fullName>
        <description>This will be used to store the record</description>
        <inlineHelpText>This will be used to store the record</inlineHelpText>
        <label>RecordcloneId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>To Store the Sequence number in approval process.</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>used for to update signOff details</description>
        <label>Signed Off Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Status for audit program</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Test_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to Store the Location values.</description>
        <label>Manufacturing Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Audit Programs (Manufacturing Site)</relationshipLabel>
        <relationshipName>Audit_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity_Group__c</fullName>
        <label>View Only Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity__c</fullName>
        <description>Used to store the View Only Entity in security in AuditProgram.</description>
        <label>View Only Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to flag in Approval Process.</description>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to store lock the Approval Process Record in Audit Program</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Audit Program</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__AuditProgram_Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>